--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,3 +66,10 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_rest:
+    routing_loader:
+        default_format: json
+    view:
+        view_response_listener:
+            force: true
