--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator: { fallback: en }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -75,3 +75,12 @@ fos_rest:
             force: true
 
 nelmio_api_doc: ~
+
+fos_oauth_server:
+    db_driver: orm
+    client_class:        AppBundle\Entity\OAuth2\Client
+    access_token_class:  AppBundle\Entity\OAuth2\AccessToken
+    refresh_token_class: AppBundle\Entity\OAuth2\RefreshToken
+    auth_code_class:     AppBundle\Entity\OAuth2\AuthCode
+    service:
+        user_provider: app.user_provider
