--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,3 +4,9 @@ services:
         arguments:
             - '@doctrine.orm.entity_manager'
             - '@security.password_encoder'
+
+    app.user_provider:
+        class: AppBundle\Security\UserProvider
+        arguments:
+            - '@doctrine.orm.entity_manager'
+
