--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "fzaninotto/faker": "^1.6",
         "friendsofsymfony/rest-bundle": "^1.7",
-        "nelmio/api-doc-bundle": "^2.13"
+        "nelmio/api-doc-bundle": "^2.13",
+        "friendsofsymfony/oauth-server-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
