--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,7 +74,11 @@ fos_rest:
         view_response_listener:
             force: true
 
-nelmio_api_doc: ~
+nelmio_api_doc:
+    sandbox:
+        authentication:
+            name: access_token
+            delivery: query
 
 fos_oauth_server:
     db_driver: orm
